# CollectionManager

./: LICENSE  README.md  package-lock.json
backend/: .env  .gitignore  Cargo.toml  Dockerfile  integration_tests.env
backend/bruno/CollectionManagerIntegrationTests/: bruno.json
backend/bruno/CollectionManagerIntegrationTests/IntegrationTestSuite - parameter errors/: 1 - clear data.bru  2-2 - init_collection invalid.bru  5-2 - remove collection dependency child invalid.bru  7-2 - add collection dependency.bru  8 - refresh collection id invalid.bru
backend/migrations/2024-03-15-162947_init_db/: down.sql  up.sql
backend/migrations/2024-05-05-155117_delete_tracks/: down.sql  up.sql
backend/postman/: CollectionManagerIntegrationTests.postman_collection.json
backend/request_utils/curl/: init_collection.curl
backend/request_utils/json/: init_collection.json
backend/src/: api.rs  common.rs  database_models.rs  domain.rs  handlers.rs  infrastructure.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs
backend/src/api/: api_models.rs  routes.rs
backend/src/domain/: collection_commons.rs  collection_dependencies.rs  collection_management.rs  controllers.rs  converter.rs  database.rs  deezer.rs  deezer_models.rs  domain_models.rs  errors.rs
backend/src/handlers/: collection_commons.rs  collection_dependencies.rs  collection_management.rs  errors.rs  handlers_models.rs
backend/src/infrastructure/: database.rs  database_converter.rs  database_models.rs  deezer.rs  errors.rs
backend/src/models/: collection.rs
frontend/: Dockerfile  index.html  package.json  (+2 more)
(+48 files in other folders)
