[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.1.5", features = ["sqlite"] }
dotenvy = "0.15"
reqwest = {version = "0.12.3", features = ["blocking", "json"]}
deezer = "0.1.0"
